@@ -5,8 +5,8 @@ import (
 	"github.com/elastic/beats/libbeat/outputs/codec/json"
 )
 
-func makeLogstashEventEncoder(index string) func(interface{}) ([]byte, error) {
-	enc := json.New(false)
+func makeLogstashEventEncoder(info beat.Info, index string) func(interface{}) ([]byte, error) {
+	enc := json.New(false, info.Version)
 	return func(event interface{}) ([]byte, error) {
 		return enc.Encode(index, event.(*beat.Event))
 	}
